# hw_7

./: hw_7.ipynb  pyproject.toml
